--- a/game.html
+++ b/game.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="styles/game.css" />
   </head>
   <body>
+    <p>tes</p>
     <div class="container">
       <h1>Gallery Shadow Monarch</h1>
       <div id="game-board" class="game-board"></div>
       <p>Waktu: <span id="timer">00</span> detik</p>
       <p>Skor: <span id="score">0</span></p>
-      <button onclick="goHome()">Kembali ke Home</button>
-      <button onclick="goToScore()">Lihat Skor</button>
+      <button type="button" onclick="goHome()">Kembali ke Home</button>
+      <button type="button" onclick="goToScore()">Lihat Skor</button>
     </div>
     <script>
       function goHome() {
@@ -27,3 +28,4 @@
     <script src="javascript/game.js"></script>
   </body>
 </html>
+
