--- a/game.html
+++ b/game.html
@@ -12,8 +12,8 @@
       <div id="game-board" class="game-board"></div>
       <p>Waktu: <span id="timer">00</span> detik</p>
       <p>Skor: <span id="score">0</span></p>
-      <button onclick="goHome()">Kembali ke Home</button>
-      <button onclick="goToScore()">Lihat Skor</button>
+      <button type="button" onclick="goHome()">Kembali ke Home</button>
+      <button type="button" onclick="goToScore()">Lihat Skor</button>
     </div>
     <script>
       function goHome() {
