--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div class="container">
       <h1 class="title">Gallery Shadow Monarch</h1>
       <div class="button-container">
-        <button class="btn start" onclick="startGame()">Mulai Permainan</button>
+        <button class="btn start" onclick="startGame()">
+          Mulai Permainan wkwkwkkw
+        </button>
         <button class="btn scores" onclick="viewScores()">Leaderboard</button>
       </div>
     </div>
