--- a/game.html
+++ b/game.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <div class="container">
-      <h1>Gallery Shadow Monarch</h1>
+      <h1>Match the Cards!</h1>
       <div id="game-board" class="game-board"></div>
-      <p>Waktu: <span id="timer">00:00</span></p>
-      <p>Skor: <span id="score">0</span></p>
-      <button id="home-btn">Kembali ke Home</button>
-      <button id="score-btn">Lihat Skor</button>
+      <p>Time: <span id="timer">00:00</span></p>
+      <p>Score: <span id="score">0</span></p>
+      <button id="home-btn">Back to Main Menu</button>
+      <button id="score-btn">Leaderboard</button>
     </div>
 
     <script>
