--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Match Our Shadows</title>
+    <title>SpongeMatch</title>
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body>
     <div class="container">
-      <h1 class="title">Gallery Shadow Monarch</h1>
+      <h1 class="title">SpongeMatch</h1>
       <div class="button-container">
         <button class="btn start" onclick="startGame()">
-          Mulai Permainan wkwkwkkw
+          Start Game
         </button>
         <button class="btn scores" onclick="viewScores()">Leaderboard</button>
       </div>
