--- a/score.html
+++ b/score.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Skor Akhir</title>
+    <title>Score</title>
     <link rel="stylesheet" href="./styles/score.css" />
   </head>
   <body>
     <div class="container">
-      <h1>Leaderboard Skor</h1>
+      <h1>Score Leaderboard</h1>
       <ol id="leaderboard"></ol>
-      <button onclick="goHome()">Kembali ke Home</button>
+      <button onclick="goHome()">Back to Main Menu</button>
     </div>
 
     <script>
