--- a/game.html
+++ b/game.html
@@ -19,10 +19,10 @@
     <!-- Modal Input Skor -->
     <div id="score-modal" class="modal">
       <div class="modal-content">
-        <h2>Game Over</h2>
-        <p>Skor Anda: <span id="final-score">0</span></p>
-        <input type="text" id="player-name" placeholder="Masukkan Nama Anda" />
-        <button onclick="saveScore()">Simpan Skor</button>
+        <h2>Well Done!</h2>
+        <p>Your Score: <span id="final-score">0</span></p>
+        <input type="text" id="player-name" placeholder="Input your name" />
+        <button onclick="saveScore()">Save</button>
       </div>
     </div>
 
