--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
         </button>
         <button class="btn scores" onclick="viewScores()">Leaderboard</button>
       </div>
+      <audio hidden autoplay loop>
+        <source src="music-index.mp3" type="audio/mpeg">
+        </audio>
+    
     </div>
-
+    
     <script>
       function startGame() {
         window.location.href = "game.html";
