--- a/score.html
+++ b/score.html
@@ -11,6 +11,9 @@
       <h1>Score Leaderboard</h1>
       <ol id="leaderboard"></ol>
       <button onclick="goHome()">Back to Main Menu</button>
+      <audio hidden autoplay loop>
+        <source src="music-score.mp3" type="audio/mpeg">
+        </audio>
     </div>
 
     <script>
