--- a/game.html
+++ b/game.html
@@ -29,6 +29,9 @@
       </audio>
     </div>
 
+    <!-- Audio untuk suara ketika kartu cocok -->
+    <audio id="match-sound" src="sound-matched.mp3"></audio>
+
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         document
